# learning_haskell

./: README.md
specs/: Gemfile  Guardfile  README.md  specs.cabal  stack.yaml
specs/src/StartingOut/: DoubleMe.hs  ListData.hs
specs/test/Misc/List/: ListSpec.hs
specs/test/Misc/StartingOut/: BooleanSpec.hs  EqualitySpec.hs  FunctionsSpec.hs  ListDataSpec.hs  PrefixSpec.hs  SimpleMathSpec.hs
