name:                specs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/specs#readme
license:             BSD3
license-file:        LICENSE
author:              Oscar Rieken
maintainer:          oriekenjr@gmail.com
copyright:           2018 orieken
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , StartingOut.DoubleMe
                     , StartingOut.ListData
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable specs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , specs
  default-language:    Haskell2010

test-suite specs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , specs
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Data.String.StripSpec
                     , Misc.List.ListSpec
                     , Misc.StartingOut.SimpleMathSpec
                     , Misc.StartingOut.BooleanSpec
                     , Misc.StartingOut.EqualitySpec
                     , Misc.StartingOut.PrefixSpec
                     , Misc.StartingOut.FunctionsSpec
                     , Misc.StartingOut.ListDataSpec

source-repository head
  type:     git
  location: https://github.com/githubuser/specs
